Turns out the svg format of the icons wasn't the problem... just a safari translate bug that backface visibility added to icon will hopefully fix 1/23/16

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ img.catPic {
   font-size: 0;
   text-indent: -9999px;
   background-color: #595959;
+  -webkit-backface-visibility: hidden;
   -webkit-transition: background 0.2s;
   transition: background 0.2s;
 }
